--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Get short SHA
+        id: shortsha
+        run: echo "::set-output name=sha::$(echo ${GITHUB_SHA::7})"
+        
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
